added blog and more

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 
                 <span>Free Word Count</span>
             </a>
             <ul class="nav-list">
-                <li class="nav-item"><a href="#">Grammar Tools</a></li>
-                <li class="nav-item"><a href="#">Blog</a></li>
-                <li class="nav-item"><a href="#">FAQ</a></li>
-                <li class="nav-item"><a href="#">About</a></li>
+                <li class="nav-item"><a href="index.html">Grammar Tools</a></li>
+                <li class="nav-item"><a href="blog.html">Blog</a></li>
+                <li class="nav-item"><a href="blog.html">FAQ</a></li>
+                <li class="nav-item"><a href="about.html">About</a></li>
             </ul>
         </div>
     </nav>
