--- a/imply-vs-infer.html
+++ b/imply-vs-infer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imply vs. Infer: Understanding the Difference</title>
+    <title>Imply vs. Infer: Understanding the Difference | Free Word Count</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- AdSense script -->
