--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html">Grammar Tools</a></li>
                 <li class="nav-item"><a href="blog.html">Blog</a></li>
-                <li class="nav-item"><a href="blog.html">FAQ</a></li>
+                <li class="nav-item"><a href="faq.html">FAQ</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
             </ul>
         </div>
