--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <!-- AdSense script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9503154287212956"
      crossorigin="anonymous"></script>
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1NVHF3YW5Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1NVHF3YW5Z');
+</script>
 </head>
 <body>
     <!-- Navigation Bar -->
